--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chart.js": "^2.9.4",
+    "leaflet": "^1.7.1",
     "numeral": "^2.0.6",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0",
+    "react-leaflet": "^3.0.2",
     "react-scripts": "3.4.3"
   },
   "scripts": {
